--- a/index.html
+++ b/index.html
@@ -1,2 +1,3 @@
-<h1> Hello World! </h1>
+<h1> Хатан Булаг ХХК! </h1>
+<h2> Best windows in Ulaanbaatar!!! </h2>
 <img src="workfeatured-terminal.png" alt="omg">
